--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,11 @@
     src: url('../fonts/Kaushan.ttf');
 }
 
+@font-face {
+    font-family: 'Open Sans';
+    src: url('../fonts/OpenSans.ttf');
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -21,8 +26,6 @@
     align-items: center;
     width: 95%;
     height: 143px;
-    left: 0;
-    top: 0;
 }
 
 .search {
@@ -67,7 +70,7 @@
 .left-border-logo {
     width: 340px;
     height: 567px;
-    background-image: url("../img/left-border.jpg");
+    background-image: url(../img/left-border.jpg);
     margin-top: 500px;
     margin-left: -32px;
 }
@@ -93,7 +96,7 @@
     font-family: Open Sans;
     text-decoration: none;
     color: black;
-    font-size: 1.1rem;
+    font-size: 1rem;
 }
 
 .header a:hover {
@@ -191,4 +194,243 @@
 
 .big-photo:hover {
     border: none;
+}
+
+/*Авторизация*/
+
+.auth {
+    width: 50px;
+    height: 50px;
+    padding-top: 6px;
+}
+
+.auth-square {
+    width: 44.55px;
+    height: 44.55px;
+    border: 2px solid #12314A;
+    box-sizing: border-box;
+}
+
+.auth a.auth-avatar {
+    width: 44.55px;
+    height: 44.55px;
+    display: block;
+    box-sizing: border-box;
+    background: url(../img/avatar.jpg) no-repeat;
+    margin-top: -50px;
+    margin-left: 5px;
+    background-size: 100%;
+}
+
+/*Профиль*/
+
+.profile-container {
+    width: 83%;
+    display: flex;
+    margin-left: 10%;
+    margin-top: 5%;
+}
+
+.auth-profile {
+    width: 100px;
+    height: 100px;
+    padding-top: 6px;
+}
+
+.auth-square-profile {
+    width: 90px;
+    height: 90px;
+    border: 2px solid #12314A;
+    box-sizing: border-box;
+}
+
+.auth-profile a.auth-avatar-profile {
+    width: 90px;
+    height: 90px;
+    display: block;
+    box-sizing: border-box;
+    background: url(../img/avatar.jpg) no-repeat;
+    margin-top: -97px;
+    margin-left: 8px;
+    background-size: 100%;
+}
+
+.left-profile-block {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 50%;
+}
+
+.statistic-flex {
+    display: flex;
+    width: 100%;
+    justify-content: space-around;
+    margin-top: 8%;
+    height: 110px;
+}
+
+.statistic-flex span {
+    width: 96px;
+    text-align: center;
+    font-family: Open Sans;
+    font-size: 14px;
+    line-height: 19px;
+}
+
+.photo-flex {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 1%;
+}
+
+.photo-flex img {
+    width: 30px;
+    height: 23px;
+}
+
+.likes-flex {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.likes-flex img {
+    width: 30px;
+    height: 28px;
+}
+
+.tasks-flex {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.tasks-flex img {
+    width: 30px;
+    height: 29px;
+}
+
+.left-profile-menu {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    width: 100%;
+    margin-top: 10%;
+    height: 142px;
+}
+
+.left-profile-menu a {
+    font-family: Open Sans;
+    font-size: 14px;
+    line-height: 19px;
+    margin-bottom: 5%;
+    text-decoration: none;
+    color: black;
+    width: 80px;
+    display: block;
+}
+
+.left-profile-menu a:last-child {
+    width: 48px;
+}
+
+.left-profile-menu .add-photo {
+    font-family: Open Sans;
+    font-size: 16px;
+    line-height: 22px;
+    margin-bottom: 5%;
+    text-decoration: none;
+    color: black;
+    font-weight: 600;
+    width: 186px;
+    display: block;
+}
+
+.left-profile-menu a:hover {
+    color: red;
+    transition: 0.3s ease;
+}
+
+.left-profile-menu .add-photo:hover {
+    color: red;
+    transition: 0.3s ease;
+}
+
+.right-profile-block {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.right-photo {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 16%;
+}
+
+.right-photo-square{
+    width: 235px;
+    height: 363px;
+    border: 2px solid #12314A;
+    box-sizing: border-box;
+    margin-top: 2%;
+}
+
+.right-photo-pic {
+    width: 235px;
+    height: 363px;
+    display: block;
+    box-sizing: border-box;
+    background: url(../img/profile-right.jpg) no-repeat;
+    margin-top: -20px;
+    margin-left: -200px;
+    background-size: 100%;
+}
+
+.right-profile-menu {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+
+.profile-arrow {
+    width: 164px;
+    height: 20px;
+    background: url(../img/arrow.png) no-repeat;
+    margin-bottom: 6%;
+}
+
+.view-photos {
+    width: 285px;
+    height: 50px;
+    background: #FFCB00;
+    font-family: Open Sans;
+    font-size: 14px;
+    line-height: 19px;
+    display: flex;
+    text-align: right;
+    color: #000000;
+    flex-direction: column;
+    padding-right: 24px;
+    justify-content: center;
+}
+
+.view-photos a {
+    text-decoration: none;
+    color: black;
+}
+
+.view-photos a:hover {
+    color: blue;
+    transition: 0.3s ease;
+}
+
+.profile-footer {
+    height: 160px;
 }
