--- a/css/style.css
+++ b/css/style.css
@@ -452,10 +452,12 @@
     height: 50px;
     border: 2px solid rgba(18, 49, 74, 0.9);
     box-sizing: border-box;
+    z-index: 2;
+    position: relative;
 }
 
 .footer-yellow-profile {
-    font-family: Kaushan Script;
+    font-family: Open Sans;
     width: 132px;
     height: 86px;
     display: block;
@@ -463,9 +465,13 @@
     background: #FFCB00;
     margin-top: -68px;
     margin-left: 42px;
-    background-size: 100%;
     text-align: center;
     padding: 20px;
+    font-size: 14px;
+    line-height: 40px;
+    font-weight: 600;
+    z-index: 1;
+    position: relative;
 }
 
 /*Настройки*/
@@ -593,3 +599,165 @@ input[type=checkbox]:checked + label:after {
     line-height: 19px;
 }
 
+/*Задание дня*/
+
+.middle-daytasks {
+    width: 83%;
+    display: flex;
+    margin-left: 9%;
+    margin-top: 2.5%;
+    justify-content: center;
+}
+
+.daytasks-flex {
+    width: 100px;
+    height: 100px;
+    padding-top: 6px;
+    margin-left: -68px;
+}
+
+.daytasks-square {
+    width: 219px;
+    height: 50px;
+    border: 2px solid rgba(18, 49, 74, 0.9);
+    box-sizing: border-box;
+    z-index: 2;
+    position: relative;
+}
+
+.daytasks-yellow {
+    font-family: Open Sans;
+    width: 132px;
+    height: 86px;
+    display: block;
+    box-sizing: border-box;
+    background: #FFCB00;
+    margin-top: -68px;
+    margin-left: 42px;
+    text-align: center;
+    padding: 20px;
+    font-size: 14px;
+    line-height: 40px;
+    font-weight: 600;
+    z-index: 1;
+    position: relative;
+}
+
+.daytasks-background-top {
+    width: 80px;
+    height: 80px;
+    background: url(../img/daytasks-background.png) no-repeat;
+    margin-left: 7%;
+    margin-top: -4%;
+    position: relative;
+}
+
+.daytasks-background-bottom {
+    width: 50px;
+    height: 50px;
+    background: url(../img/daytasks-background.png) no-repeat;
+    position: absolute;
+    margin-left: 52%;
+    margin-top: 5%;
+    z-index: -1;
+}
+
+.tasks-flex {
+    width: 84%;
+    display: flex;
+    margin-left: 10%;
+    margin-top: 2%;
+    flex-direction: row;
+}
+
+.task-square {
+    width: 30%;
+    height: 295px;
+    border: 2px solid #12314A;
+    box-sizing: border-box;
+    background-color: white;
+}
+
+.task-square p {
+    width: 100%;
+    height: 21em;
+    font-family: Open Sans;
+    font-size: 14px;
+    line-height: 19px;
+    align-items: center;
+    text-align: center;
+    color: #000000;
+    padding: 0 1em;
+    display: table-cell;
+    vertical-align: middle;
+}
+
+.task-square span {
+    font-weight: 600;
+}
+
+.footer-flex-daytasks {
+    width: 84%;
+    display: flex;
+    margin-left: 10%;
+    margin-top: 4%;
+    flex-direction: column;
+    align-items: flex-end;
+    margin-bottom: 5%;
+}
+
+.footer-yellow-daytasks {
+    width: 285px;
+    height: 50px;
+    background: #FFCB00;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.footer-yellow-daytasks p {
+    height: 4em;
+    font-family: Open Sans;
+    font-size: 12px;
+    line-height: 16px;
+    align-items: center;
+    text-align: center;
+    color: #000000;
+    width: 62%;
+    margin: 3%;
+}
+
+.small-arrow {
+    width: 27px;
+    height: 15px;
+    background: url(../img/small-arrow.png) no-repeat;
+    box-sizing: border-box;
+    display: block;
+}
+
+.hashtag-flex {
+    display: flex;
+    width: 18%;
+    justify-content: flex-end;
+    margin-top: 1%;
+    align-items: center;
+}
+
+.hashtag {
+    margin-right: 10%;
+    text-decoration: none;
+    color: black;
+}
+
+.doing {
+    width: 172px;
+    height: 50px;
+    font-family: Open Sans;
+    font-size: 12px;
+    line-height: 16px;
+    align-items: center;
+    text-align: center;
+    color: #000000;
+    transform: rotate(270deg);
+    position: absolute;
+    margin-left: -10%;
+}
