--- a/css/style.scss
+++ b/css/style.scss
@@ -762,5 +762,5 @@ input[type=checkbox]:checked + label:after {
   color: #000000;
   transform: rotate(270deg);
   position: absolute;
-  margin-left: -10%;
+  margin: 8% -10%;
 }
